# haskell-sudoku

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hie.yaml  sudoku.cabal
app/: Main.hs
src/: Sudoku.hs  sudoku.lhs
